@@ -1,4 +1,5 @@
 0.11
+ - Add 'onclick' parameter to Input.
 
 0.10 2024-02-04T17:11:53+01:00
  - API change: Add 'data' and 'data_type' parameters to Form.
